# vexmon

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  package-lock.json  package.json
frontend/: app.ts  generated.ts  index.html  style.css
schema/: telemetry.vexil
src/: generated.rs  main.rs
src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
static/: bundle.js
